add database infrastructure

--- a/DogsHouseService/appsettings.json
+++ b/DogsHouseService/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=User-PC;Database=DogsHouseServiceDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
+
   "AllowedHosts": "*"
 }
