--- a/DogsHouseService/appsettings.json
+++ b/DogsHouseService/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "Version": "Dogshouseservice.Version1.0.1",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,6 +9,12 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=User-PC;Database=DogsHouseServiceDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
+
+  "RateLimiting": {
+    "PermitLimit": 10,
+    "WindowSeconds": 1,
+    "QueueLimit": 0
   },
 
   "AllowedHosts": "*"
